--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.17.6",
     "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "tailwindcss": "^3.2.4",
     "trix": "^2.0.4"
   },
